# Pascal_Project

./: .gitignore  CMakeLists.txt  Newton.txt  Object.h  ScannerTest.txt  Simple.cpp  SimpleCpp  TestCase.txt  TestFor.txt  TestIf.txt  TestWhile copy.txt  TestWhile.txt
ASN3_Output/: case-execute.txt  case-parseTree.txt  for-execute.txt  for-parseTree.txt  if-execute.txt  if-parseTree.txt  while-parseTree.txt
backend/: Executor.cpp  Executor.h
frontend/: Parser.cpp  Parser.h  Scanner.h  Source.h  Token.cpp  Token.h
